--- a/PosApp/app/src/main/res/layout/recycleview_users.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_users.xml
@@ -32,9 +32,10 @@
         android:layout_width="230dp"
         android:layout_height="57dp"
         android:gravity="center"
-        android:text="パスワード:"
+        android:text="パスワードリセット"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/textView36"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textView36"
@@ -44,9 +45,12 @@
         android:id="@+id/tvPass"
         android:layout_width="361dp"
         android:layout_height="57dp"
-        android:text="pass"
+        android:text=""
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:hint="あたらしいパスワード入力"
+        android:visibility="invisible"
+        android:password="true"
         app:layout_constraintBottom_toBottomOf="@+id/btnPass"
         app:layout_constraintStart_toEndOf="@+id/btnPass"
         app:layout_constraintTop_toTopOf="@+id/btnPass"
