--- a/PosApp/app/src/main/res/layout/fragment_add_shift.xml
+++ b/PosApp/app/src/main/res/layout/fragment_add_shift.xml
@@ -21,6 +21,18 @@
         app:layout_constraintVertical_bias="0.955" />
 
     <Button
+        android:id="@+id/btnShifts"
+        android:layout_width="216dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="548dp"
+        android:text="シフト確認"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.954" />
+
+    <Button
         android:id="@+id/btnAddShift"
         android:layout_width="216dp"
         android:layout_height="71dp"
