--- a/PosApp/app/src/main/res/layout/fragment_pay.xml
+++ b/PosApp/app/src/main/res/layout/fragment_pay.xml
@@ -23,8 +23,8 @@
         android:id="@+id/paymentTotalAmountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="128dp"
         android:text="お支払い合計金額"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -33,8 +33,8 @@
 
     <TextView
         android:id="@+id/paymentAmountEditText"
-        android:layout_width="470dp"
-        android:layout_height="wrap_content"
+        android:layout_width="351dp"
+        android:layout_height="67dp"
         android:gravity="left"
         android:text="0"
         android:textColor="@color/black"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginTop="240dp"
         android:text="支払方法"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -121,10 +121,10 @@
         android:inputType="number"
         android:maxLength="7"
         android:textColor="@color/black"
-        android:visibility="invisible"
         android:textSize="50dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/tvDepositAmount"
-        app:layout_constraintHorizontal_bias="0.035"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvDepositAmount"
         app:layout_constraintTop_toBottomOf="@+id/tvDepositAmount" />
 
@@ -162,168 +162,105 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <RadioButton
-        android:id="@+id/btnPayPay"
+
+    <RadioGroup
+        android:id="@+id/paymentRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PayPay"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/btnCash"
-        app:layout_constraintTop_toBottomOf="@+id/btnCash" />
-
-    <RadioButton
-        android:id="@+id/btnCash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="現金"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/paymentMethodTextView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/paymentMethodTextView"
-        app:layout_constraintTop_toBottomOf="@+id/paymentMethodTextView" />
-
-    <EditText
-        android:id="@+id/edtTableNumBerPay"
-        android:layout_width="129dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="テーブル番号"
-        android:inputType="number"
-        android:maxLength="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.012"
+        android:layout_marginStart="32dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/paymentMethodTextView"
+        app:layout_constraintVertical_bias="0.0">
 
-    <ImageButton
-        android:id="@+id/btnSearch"
-        android:layout_width="59dp"
-        android:layout_height="59dp"
-        android:background="@color/purple_500"
-        android:src="?android:attr/actionModeWebSearchDrawable"
-        app:layout_constraintBottom_toBottomOf="@+id/edtTableNumBerPay"
-        app:layout_constraintStart_toEndOf="@+id/edtTableNumBerPay"
-        app:layout_constraintTop_toTopOf="@+id/edtTableNumBerPay" />
+
+        <RadioButton
+            android:id="@+id/btnCash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="現金"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/paymentMethodTextView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/paymentMethodTextView"
+            app:layout_constraintTop_toBottomOf="@+id/paymentMethodTextView" />
+
+        <RadioButton
+            android:id="@+id/btnPayPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PayPay"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/btnCash"
+            app:layout_constraintTop_toBottomOf="@+id/btnCash" />
+
+    </RadioGroup>
 
     <LinearLayout
-        android:layout_width="632dp"
-        android:layout_height="579dp"
+        android:layout_width="wrap_content"
+        android:layout_height="596dp"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/btnCheckPay"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/textView46"
-                android:layout_width="70dp"
-                android:textColor="@color/black"
-                android:gravity="right"
+                android:layout_width="220dp"
                 android:layout_height="match_parent"
-                android:textSize="18dp"
-                android:layout_weight="1"
-                android:text="テーブル番号:" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:gravity="right"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="注文時:" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:gravity="left"
-                android:textSize="20dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:gravity="right"
-                android:textSize="20dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="提供状況:" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:gravity="left"
-                android:textSize="20dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/black"
                 android:gravity="center"
-                android:textSize="30dp"
-                android:layout_weight="1"
-                android:text="品名" />
+                android:text="テーブル番号"
+                android:textColor="@color/black"
+                android:textSize="18dp" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
                 android:gravity="center"
-                android:textSize="30dp"
-                android:layout_weight="1"
-                android:text="価格" />
+                android:text="提供状況"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
                 android:gravity="center"
-                android:textSize="30dp"
-                android:layout_weight="1"
-                android:text="数量" />
+                android:text="注文金額"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
                 android:gravity="center"
-                android:textSize="30dp"
-                android:layout_weight="1"
-                android:text="小計" />
+                android:text="支払い"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewPay"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="500dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
