--- a/PosApp/app/src/main/res/layout/fragment_status.xml
+++ b/PosApp/app/src/main/res/layout/fragment_status.xml
@@ -149,13 +149,13 @@
                 android:textColor="@color/black"
                 android:textSize="20dp" />
 
-            <TextView
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:text=" 在庫"/>
+<!--            <TextView-->
+<!--                android:layout_width="300dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textSize="20dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:gravity="center"-->
+<!--                android:text=" 在庫"/>-->
 
             <TextView
                 android:layout_width="300dp"
@@ -174,7 +174,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="6dp"
-
         android:text="戻る"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
