--- a/PosApp/app/src/main/res/layout/recycleview_order_detail.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_order_detail.xml
@@ -38,14 +38,14 @@
             android:textColor="@color/black"
             android:textSize="20dp"  />
 
-        <TextView
-            android:id="@+id/tvQuantityInStock"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:text=" 在庫" />
+<!--        <TextView-->
+<!--            android:id="@+id/tvQuantityInStock"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:gravity="center"-->
+<!--            android:text=" 在庫" />-->
 
         <TextView
             android:id="@+id/tvQuantityInOrder"
@@ -57,30 +57,41 @@
             android:text="カート数" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="150dp"
-        android:layout_gravity="right"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_width="250dp"-->
+<!--        android:layout_gravity="right"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="horizontal">-->
 
-        <Button
-            android:id="@+id/btnMinus"
-            android:layout_width="5dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:textSize="30dp"
-            android:text="－" />
+<!--        <Button-->
+<!--            android:id="@+id/btnMinus"-->
+<!--            android:layout_width="5dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textSize="30dp"-->
+<!--            android:text="－" />-->
 
-        <Button
-            android:id="@+id/btnPlus"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_width="5dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:textSize="30dp"
-            android:text="＋" />
-    </LinearLayout>
+<!--        <Button-->
+<!--            android:id="@+id/btnPlus"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_width="5dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textSize="30dp"-->
+<!--            android:text="＋" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/btnUpdateMenu"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_width="5dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@color/purple_500"-->
+<!--            app:srcCompat="@android:drawable/ic_popup_sync" />-->
+<!--    </LinearLayout>-->
     <TextView
         android:id="@+id/textView21"
         android:layout_width="match_parent"
