--- a/PosApp/app/src/main/res/layout/recyclerview_status.xml
+++ b/PosApp/app/src/main/res/layout/recyclerview_status.xml
@@ -84,6 +84,7 @@
             android:layout_width="30dp"
             android:layout_height="60dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:text="提供済" />
@@ -94,6 +95,7 @@
             android:layout_width="10dp"
             android:layout_height="60dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:text="キャンセル" />
