--- a/PosApp/app/src/main/res/layout/fragment_status.xml
+++ b/PosApp/app/src/main/res/layout/fragment_status.xml
@@ -174,7 +174,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="6dp"
-        android:text="戻る"
+        android:text="受付に戻る"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
