--- a/PosApp/app/src/main/res/layout/fragment_admin_login.xml
+++ b/PosApp/app/src/main/res/layout/fragment_admin_login.xml
@@ -49,10 +49,10 @@
         android:layout_marginTop="160dp"
         android:text="戻る" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Button" />-->
 
 </FrameLayout>
