--- a/PosApp/app/src/main/res/layout/recycleview_users.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_users.xml
@@ -48,7 +48,7 @@
         android:text=""
         android:textColor="@color/black"
         android:textSize="20dp"
-        android:hint="あたらしいパスワード入力"
+        android:hint="新しいパスワード入力"
         android:visibility="invisible"
         android:password="true"
         app:layout_constraintBottom_toBottomOf="@+id/btnPass"
